--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -552,24 +552,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-09-25T21:53:13.216Z"
+     "end_time": "2019-09-25T21:54:02.304026Z",
+     "start_time": "2019-09-25T21:53:13.218948Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "              learning_rate=0.1, max_delta_step=0, max_depth=4,\n",
+       "              min_child_weight=1, missing=None, n_estimators=5, n_jobs=4,\n",
+       "              nthread=None, objective='multi:softprob', random_state=0,\n",
+       "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "              silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "root_model.fit(features_train, labels_train[:,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-25T21:35:13.138061Z",
-     "start_time": "2019-09-25T21:35:08.477646Z"
+     "end_time": "2019-09-25T21:54:06.960864Z",
+     "start_time": "2019-09-25T21:54:05.263067Z"
     }
    },
    "outputs": [],
@@ -579,11 +597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-25T21:35:13.171014Z",
-     "start_time": "2019-09-25T21:35:13.139930Z"
+     "end_time": "2019-09-25T21:54:07.903397Z",
+     "start_time": "2019-09-25T21:54:07.864433Z"
     }
    },
    "outputs": [
@@ -593,7 +611,7 @@
        "0.2948457647645508"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
