--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'd like to try several other simple models included in sklearn.  SVM, Random Forest, Gradient Boosting (xgb), seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion."
+    "I'd like to try several other simple models.  SVM, Random Forest, Gradient Boosting (xgb), seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion.\n",
+    "\n",
+    "Warning: because I've updated the bash code, some of these commands will no longer work."
    ]
   },
   {
@@ -618,6 +620,67 @@
    ],
    "source": [
     "sklearn.metrics.accuracy_score(labels_train[:,0],root_predict_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test that the new chord_train works.\n",
+    "\n",
+    "```python chord_train.py partial_lr xgb_partial xgb --params T 10 5 0.1```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-26T01:28:24.665065Z",
+     "start_time": "2019-09-26T01:28:24.613946Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metrics = pickle.load(open(\"Models/xgb_partial_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-26T01:29:47.480607Z",
+     "start_time": "2019-09-26T01:29:47.443549Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root F1 score: 0.04978459918603366\n",
+      "Quality F1 score: 0.6160150075885393\n",
+      "Add F1 score: 0.5120695646554685\n",
+      "Inversion F1 score: 0.9474185318468422\n",
+      "Total accuracy: 0.12281240405280934\n"
+     ]
+    }
+   ],
+   "source": [
+    "#without weighting\n",
+    "print(f\"Root F1 score: {metrics['root_F1_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_F1_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_F1_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_F1_valid']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_valid']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Except for the root model, this is pretty good, especially for something that ran so quickly and can be expanded further."
    ]
   },
   {
