setup for xgb tuning

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "#without weighting\n",
+    "#with weighting\n",
     "print(f\"Root F1 score: {metricsw['root_F1_valid']}\")\n",
     "print(f\"Quality F1 score: {metricsw['quality_F1_valid']}\")\n",
     "print(f\"Add F1 score: {metricsw['add_F1_valid']}\")\n",
@@ -684,11 +684,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Focusing on XGB\n",
+    "Due to time constraints, I need to focus on just one model and tune the parameters.  Let's go with XGB, and switch later if it can't beat the random forest / logistic regression baseline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Max depth\n",
+    "Because a major constraint is disk space usage, I will vary max depth and num_estimators simultaneously, so as to take a constant amount of disk space.  First, figure out the space per estimator..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "python chord_train.py full xgb_d3 xgb --params T 1 3 0.1;\n",
+    "python chord_train.py full xgb_d5 xgb --params T 1 5 0.1;\n",
+    "python chord_train.py full xgb_d10 xgb --params T 1 10 0.1;\n",
+    "python chord_train.py full xgb_d15 xgb --params T 1 15 0.1;"
+   ]
   }
  ],
  "metadata": {
