fix file reading/writing

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -893,9 +893,17 @@
     }
    },
    "source": [
-    "To test different learning rates, let's try it on just 10% of the data set.\n",
+    "I'd like to target a runtime of no more than 2 hours, which comes out to 30 trees.  I think the optimal learning rate might depend on the number of trees, but 2 hours per attempt is prohibitive, so I'm running it only an a fraction of the data.\n",
     "\n",
-    "```python chord_train.py full xgb_l01 xgb --frac 0.1 --params T 5 10 0.1;```"
+    "Test run with 5 trees:\n",
+    "\n",
+    "```python chord_train.py full xgb_l01 xgb --frac 0.1 --params T 5 10 0.1;```\n",
+    "\n",
+    "2.76 min, so estimate 16 minutes if there are 30 trees.  I'd like it to go a bit faster, so I'll run on 5% of the data.\n",
+    "\n",
+    "```python chord_train.py full xgb_l01 xgb --frac 0.05 --params T 30 10 0.1;\n",
+    "python chord_train.py full xgb_l1 xgb --frac 0.05 --params T 30 10 1;\n",
+    "```"
    ]
   },
   {
