calculate final accuracy

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -1962,11 +1962,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 273,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T22:49:05.819366Z",
-     "start_time": "2019-09-24T22:49:05.811933Z"
+     "end_time": "2019-09-27T05:47:48.526532Z",
+     "start_time": "2019-09-27T05:47:48.452747Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metrics_w = pickle.load(open(\"Models/lr_w_metrics.pkl\", 'rb'))\n",
+    "metrics = pickle.load(open(\"Models/full_1_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-27T05:48:08.466442Z",
+     "start_time": "2019-09-27T05:48:08.456542Z"
     }
    },
    "outputs": [
@@ -1975,30 +1990,30 @@
      "output_type": "stream",
      "text": [
       "Results without weighting\n",
-      "Root F1 score: 0.3966507946593213\n",
-      "Quality F1 score: 0.6490208158952907\n",
-      "Add F1 score: 0.672603894529484\n",
-      "Inversion F1 score: 0.937381395633498\n",
+      "Root F1 score: 0.3857583163761869\n",
+      "Quality F1 score: 0.14349380814987414\n",
+      "Add F1 score: 0.12793459350380063\n",
+      "Inversion F1 score: 0.3306733324103963\n",
       "Total accuracy: 0.2370336461432822\n"
      ]
     }
    ],
    "source": [
     "print('Results without weighting')\n",
-    "print(f\"Root F1 score: {metrics[2]['root_F1_valid']}\")\n",
-    "print(f\"Quality F1 score: {metrics[2]['quality_F1_valid']}\")\n",
-    "print(f\"Add F1 score: {metrics[2]['add_F1_valid']}\")\n",
-    "print(f\"Inversion F1 score: {metrics[2]['inv_F1_valid']}\")\n",
-    "print(f\"Total accuracy: {metrics[2]['total_acc_valid']}\")"
+    "print(f\"Root F1 score: {metrics['root_macro_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_macro_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_macro_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_macro_valid']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_valid']}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 276,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T22:49:14.240438Z",
-     "start_time": "2019-09-24T22:49:14.233895Z"
+     "end_time": "2019-09-27T05:48:18.098600Z",
+     "start_time": "2019-09-27T05:48:18.092510Z"
     }
    },
    "outputs": [
@@ -2007,20 +2022,20 @@
      "output_type": "stream",
      "text": [
       "Results with weighting\n",
-      "Root F1 score: 0.38955497763112396\n",
-      "Quality F1 score: 0.42230955816125526\n",
-      "Add F1 score: 0.3835158750617886\n",
-      "Inversion F1 score: 0.7241362078130287\n",
+      "Root F1 score: 0.37781249988611737\n",
+      "Quality F1 score: 0.14957553436744325\n",
+      "Add F1 score: 0.09606452882674778\n",
+      "Inversion F1 score: 0.318817300804805\n",
       "Total accuracy: 0.07412832837415122\n"
      ]
     }
    ],
    "source": [
     "print('Results with weighting')\n",
-    "print(f\"Root F1 score: {metrics_w['root_F1_valid']}\")\n",
-    "print(f\"Quality F1 score: {metrics_w['quality_F1_valid']}\")\n",
-    "print(f\"Add F1 score: {metrics_w['add_F1_valid']}\")\n",
-    "print(f\"Inversion F1 score: {metrics_w['inv_F1_valid']}\")\n",
+    "print(f\"Root F1 score: {metrics_w['root_macro_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics_w['quality_macro_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics_w['add_macro_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics_w['inv_macro_valid']}\")\n",
     "print(f\"Total accuracy: {metrics_w['total_acc_valid']}\")"
    ]
   },
