--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -1318,12 +1318,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-27T05:42:03.674073Z",
+     "start_time": "2019-09-27T05:42:03.661798Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metrics = pickle.load(open(\"Models/xgb_final_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-27T05:42:55.326267Z",
+     "start_time": "2019-09-27T05:42:55.319594Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root F1 score: 0.4141022791346447\n",
+      "Quality F1 score: 0.18972988029525892\n",
+      "Add F1 score: 0.14266860650631757\n",
+      "Inversion F1 score: 0.3827024486097428\n",
+      "Total accuracy: 0.15339560716990658\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Root F1 score: {metrics['root_macro_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_macro_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_macro_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_macro_valid']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_valid']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-27T05:50:29.043951Z",
+     "start_time": "2019-09-27T05:50:29.035355Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root accuracy score: 0.4248104804745605\n",
+      "Quality accuracy score: 0.5685757277405212\n",
+      "Add accuracy score: 0.46348758150508074\n",
+      "Inversion accuracy score: 0.7601753636380524\n",
+      "Total accuracy: 0.15487732755067296\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Root accuracy score: {metrics['root_acc_test']}\")\n",
+    "print(f\"Quality accuracy score: {metrics['quality_acc_test']}\")\n",
+    "print(f\"Add accuracy score: {metrics['add_acc_test']}\")\n",
+    "print(f\"Inversion accuracy score: {metrics['inv_acc_test']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_test']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "7*"
-   ]
+   "source": []
   }
  ],
  "metadata": {
