Introduce new features from previous timeblocks, and start tuning

--- a/initial_exploration/Logistic Regression model.ipynb
+++ b/initial_exploration/Logistic Regression model.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Logistic Regression Model\n",
     "Tristan Miller, 9/18/2019\n",
-    "\n"
+    "\n",
+    "Warning: because of updates to the code, many parts of this notebook will no longer work."
    ]
   },
   {
