--- a/initial_exploration/Other models.ipynb
+++ b/initial_exploration/Other models.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "I'd like to try several other simple models.  SVM, Random Forest, Gradient Boosting (xgb), seem like good places to start.  I will make copies of `lr_train.py` for each model.  In principle I could use a different model for each of root, quality, add, and inversion.\n",
     "\n",
-    "Warning: because I've updated the bash code, some of these commands will no longer work."
+    "Warning: because of updates to the code, many parts of this notebook will no longer work."
    ]
   },
   {
@@ -28,8 +28,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-26T15:24:12.065145Z",
-     "start_time": "2019-09-26T15:24:09.373851Z"
+     "end_time": "2019-09-27T16:15:31.362569Z",
+     "start_time": "2019-09-27T16:15:26.799368Z"
     }
    },
    "outputs": [],
@@ -63,8 +63,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-26T15:24:12.293487Z",
-     "start_time": "2019-09-26T15:24:12.067214Z"
+     "end_time": "2019-09-27T16:15:31.663521Z",
+     "start_time": "2019-09-27T16:15:31.366023Z"
     }
    },
    "outputs": [],
@@ -1313,16 +1313,18 @@
    "source": [
     "### Final model\n",
     "\n",
+    "Note: Through later testing I decided that this would *not* be the final model after all.  It is possible to improve the scores with further feature engineering.  I will do this in another notebook.\n",
+    "\n",
     "```python chord_train.py full xgb_final xgb_tuned --params T 30 10 0.2 0.1 0.05 0.05```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-27T05:42:03.674073Z",
-     "start_time": "2019-09-27T05:42:03.661798Z"
+     "end_time": "2019-09-27T16:15:45.157998Z",
+     "start_time": "2019-09-27T16:15:45.152135Z"
     }
    },
    "outputs": [],
@@ -1332,11 +1334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-27T05:42:55.326267Z",
-     "start_time": "2019-09-27T05:42:55.319594Z"
+     "end_time": "2019-09-27T16:17:24.066775Z",
+     "start_time": "2019-09-27T16:17:24.061495Z"
     }
    },
    "outputs": [
@@ -1344,6 +1346,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training set:\n",
+      "Root F1 score: 0.49603860673089756\n",
+      "Quality F1 score: 0.5893069672319536\n",
+      "Add F1 score: 0.38198319565592376\n",
+      "Inversion F1 score: 0.49529182714246217\n",
+      "Total accuracy: 0.25468281610091664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Training set:')\n",
+    "print(f\"Root F1 score: {metrics['root_macro_train']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_macro_train']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_macro_train']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_macro_train']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_train']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-27T16:17:06.611770Z",
+     "start_time": "2019-09-27T16:17:06.605829Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation set:\n",
       "Root F1 score: 0.4141022791346447\n",
       "Quality F1 score: 0.18972988029525892\n",
       "Add F1 score: 0.14266860650631757\n",
@@ -1353,6 +1388,7 @@
     }
    ],
    "source": [
+    "print('Validation set:')\n",
     "print(f\"Root F1 score: {metrics['root_macro_valid']}\")\n",
     "print(f\"Quality F1 score: {metrics['quality_macro_valid']}\")\n",
     "print(f\"Add F1 score: {metrics['add_macro_valid']}\")\n",
@@ -1361,33 +1397,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-27T05:50:29.043951Z",
-     "start_time": "2019-09-27T05:50:29.035355Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root accuracy score: 0.4248104804745605\n",
-      "Quality accuracy score: 0.5685757277405212\n",
-      "Add accuracy score: 0.46348758150508074\n",
-      "Inversion accuracy score: 0.7601753636380524\n",
-      "Total accuracy: 0.15487732755067296\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(f\"Root accuracy score: {metrics['root_acc_test']}\")\n",
-    "print(f\"Quality accuracy score: {metrics['quality_acc_test']}\")\n",
-    "print(f\"Add accuracy score: {metrics['add_acc_test']}\")\n",
-    "print(f\"Inversion accuracy score: {metrics['inv_acc_test']}\")\n",
-    "print(f\"Total accuracy: {metrics['total_acc_test']}\")"
+    "It looks a little bit overtrained.  I wonder if my hyperparameter optimization could be improved.  I had to do it on a subset of data because of time constraints, but the optimal hyperparameters could depend on the size of data."
    ]
   },
   {
