--- a/Model tuning.ipynb
+++ b/Model tuning.ipynb
@@ -467,7 +467,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "metrics = [pickle.load(open(\"Models/xgb_l002_metrics.pkl\", 'rb'))]\n",
+    "metrics.append(pickle.load(open(\"Models/xgb_l005_metrics.pkl\", 'rb')))\n",
+    "metrics.append(pickle.load(open(\"Models/xgb_l01_metrics.pkl\", 'rb')))\n",
+    "metrics.append(pickle.load(open(\"Models/xgb_l02_metrics.pkl\", 'rb')))\n",
+    "metrics.append(pickle.load(open(\"Models/xgb_l04_metrics.pkl\", 'rb')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = [0.02,0.05,0.1,0.2,0.4]\n",
+    "plt.figure(figsize=(6,4))\n",
+    "plt.plot(learning_rate, [m['root_macro_valid'] for m in metrics],'-o');\n",
+    "plt.plot(learning_rate, [m['quality_macro_valid'] for m in metrics],'-o');\n",
+    "plt.plot(learning_rate, [m['add_macro_valid'] for m in metrics],'-o');\n",
+    "plt.plot(learning_rate, [m['inv_macro_valid'] for m in metrics],'-o');\n",
+    "plt.plot(learning_rate, [m['total_acc_valid'] for m in metrics],'-o');\n",
+    "plt.xlabel('Learning rate')\n",
+    "plt.ylabel('Performance (preliminary)')\n",
+    "plt.xscale('log')\n",
+    "plt.legend(['F1 Root','F1 Quality','F1 Add','F1 Inversion','Total accuracy'],bbox_to_anchor=(1.3, .5),loc='center')\n",
+    "plt.tight_layout()\n",
+    "#plt.savefig('images/xgb_validation')"
+   ]
   }
  ],
  "metadata": {
