set new model in place

--- a/Model tuning.ipynb
+++ b/Model tuning.ipynb
@@ -575,14 +575,124 @@
    "metadata": {},
    "source": [
     "## Best model\n",
-    "One notable thing is that so far this is actually doing worse than before my feature engineering.  It's possible that this is because I reduced the training set at the same time (to reduce disk space) or maybe because previously I trained the model for 2 hours instead of one.  So for my final number, I'm just going to train it for two hours instead and hope that solves the issue."
+    "One notable thing is that the root model is actually doing worse than before my feature engineering.  I think this is because I reduced the training set size by including random transpositions rather than copies of each possible transposition.  The other three models are doing better.  Maybe I could go back to a larger training set with the larger feature set, but I think even if I don't have time for that, this is an improvement."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```python chord_train.py multi xgb_l002 xgb_supertuned --noT --params T 98 52 52 52 5 9 9 9 0.2 0.4 0.1 0.4;```"
+    "```python chord_train.py multi xgb_multifinal xgb_supertuned --noT --params T 98 52 52 52 5 9 9 9 0.2 0.4 0.1 0.4;```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-30T21:09:44.074301Z",
+     "start_time": "2019-09-30T21:09:43.995347Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metrics = pickle.load(open(\"Models/xgb_multifinal_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-30T21:10:28.467647Z",
+     "start_time": "2019-09-30T21:10:28.453529Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training set:\n",
+      "Root F1 score: 0.48724706134800744\n",
+      "Quality F1 score: 0.9531070770451715\n",
+      "Add F1 score: 0.6776300462271979\n",
+      "Inversion F1 score: 0.9513227609199878\n",
+      "Total accuracy: 0.3878694414120936\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('training set:')\n",
+    "print(f\"Root F1 score: {metrics['root_macro_train']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_macro_train']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_macro_train']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_macro_train']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_train']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-30T21:09:44.793068Z",
+     "start_time": "2019-09-30T21:09:44.761790Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation set:\n",
+      "Root F1 score: 0.36582465365483396\n",
+      "Quality F1 score: 0.20994537063103133\n",
+      "Add F1 score: 0.1688243502147203\n",
+      "Inversion F1 score: 0.42055701605789286\n",
+      "Total accuracy: 0.1938399394092401\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Validation set:')\n",
+    "print(f\"Root F1 score: {metrics['root_macro_valid']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_macro_valid']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_macro_valid']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_macro_valid']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_valid']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-30T21:21:35.239506Z",
+     "start_time": "2019-09-30T21:21:35.214029Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set:\n",
+      "Root F1 score: 0.3739851968673274\n",
+      "Quality F1 score: 0.7062287529490442\n",
+      "Add F1 score: 0.5529899128754807\n",
+      "Inversion F1 score: 0.93656071780201\n",
+      "Total accuracy: 0.18774530009498377\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test set:')\n",
+    "print(f\"Root F1 score: {metrics['root_acc_test']}\")\n",
+    "print(f\"Quality F1 score: {metrics['quality_acc_test']}\")\n",
+    "print(f\"Add F1 score: {metrics['add_acc_test']}\")\n",
+    "print(f\"Inversion F1 score: {metrics['inv_acc_test']}\")\n",
+    "print(f\"Total accuracy: {metrics['total_acc_test']}\")"
    ]
   },
   {
