prepare to recalculate features

--- a/Post-Insight Refactoring.ipynb
+++ b/Post-Insight Refactoring.ipynb
@@ -25,7 +25,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Recalculating-features\" data-toc-modified-id=\"Recalculating-features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recalculating features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Reviewing-chord-parsing\" data-toc-modified-id=\"Reviewing-chord-parsing-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Reviewing chord parsing</a></span></li><li><span><a href=\"#Improved-imputation\" data-toc-modified-id=\"Improved-imputation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Improved imputation</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Recalculating-features\" data-toc-modified-id=\"Recalculating-features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recalculating features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Reviewing-chord-parsing\" data-toc-modified-id=\"Reviewing-chord-parsing-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Reviewing chord parsing</a></span></li><li><span><a href=\"#Improved-imputation\" data-toc-modified-id=\"Improved-imputation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Improved imputation</a></span></li><li><span><a href=\"#Reprocessing-chords\" data-toc-modified-id=\"Reprocessing-chords-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Reprocessing chords</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -438,6 +438,25 @@
     "plt.tight_layout()\n",
     "plt.colorbar()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reprocessing chords\n",
+    "When I recalculate chords, I want to omit the step where data is duplicated and transposed.  I have an eye towards using convolutional neural networks, and the duplicate/transpose step is redundant with that.  I previously had such an option, but deprecated it, so now I'll reintroduce it.\n",
+    "\n",
+    "Check this hasn't broken anything by running:\n",
+    "\n",
+    "`python chord_process.py test --frac 0.01 --notrans`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
