fix error in root standardization

--- a/Post-Insight Refactoring.ipynb
+++ b/Post-Insight Refactoring.ipynb
@@ -25,7 +25,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Recalculating-features\" data-toc-modified-id=\"Recalculating-features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recalculating features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Reviewing-chord-parsing\" data-toc-modified-id=\"Reviewing-chord-parsing-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Reviewing chord parsing</a></span></li><li><span><a href=\"#Improved-imputation\" data-toc-modified-id=\"Improved-imputation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Improved imputation</a></span></li><li><span><a href=\"#Reprocessing-chords\" data-toc-modified-id=\"Reprocessing-chords-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Reprocessing chords</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Recalculating-features\" data-toc-modified-id=\"Recalculating-features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recalculating features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Reviewing-chord-parsing\" data-toc-modified-id=\"Reviewing-chord-parsing-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Reviewing chord parsing</a></span></li><li><span><a href=\"#Improved-imputation\" data-toc-modified-id=\"Improved-imputation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Improved imputation</a></span></li><li><span><a href=\"#Reprocessing-chords\" data-toc-modified-id=\"Reprocessing-chords-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Reprocessing chords</a></span></li></ul></li><li><span><a href=\"#New-baselines\" data-toc-modified-id=\"New-baselines-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>New baselines</a></span><ul class=\"toc-item\"><li><span><a href=\"#Logistic-Regression\" data-toc-modified-id=\"Logistic-Regression-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Logistic Regression</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-06T23:44:54.018607Z",
-     "start_time": "2019-12-06T23:44:54.005690Z"
+     "end_time": "2019-12-10T19:23:23.301475Z",
+     "start_time": "2019-12-10T19:23:23.284641Z"
     }
    },
    "outputs": [],
@@ -452,11 +452,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Now run the following:\n",
+    "\n",
+    "```python chord_process.py partialv2 --frac 0.1 --notrans\n",
+    "python chord_process.py fullv2 --notrans```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New baselines\n",
+    "\n",
+    "### Logistic Regression\n",
+    "Let's run a quick logistic regression model using the new data.  Previously, this achieved an accuracy of 7%, but it may be higher (because of improvements) or lower (because I only intend to use a partial data set, without duplicating/transposing data).\n",
+    "\n",
+    "`python chord_train.py partialv2 lr_v2 lr --noT --params T 0.1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-10T18:50:39.807270Z",
+     "start_time": "2019-12-10T18:50:39.799940Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(f\"Models/lr_v2.pkl\", 'rb') as f:\n",
+    "    root_model = pickle.load(f)\n",
+    "    quality_model = pickle.load(f)\n",
+    "    add_model = pickle.load(f)\n",
+    "    inv_model = pickle.load(f)"
+   ]
   }
  ],
  "metadata": {
