--- a/Post-Insight Refactoring.ipynb
+++ b/Post-Insight Refactoring.ipynb
@@ -26,7 +26,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Recalculating-features\" data-toc-modified-id=\"Recalculating-features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recalculating features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Reviewing-chord-parsing\" data-toc-modified-id=\"Reviewing-chord-parsing-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Reviewing chord parsing</a></span></li><li><span><a href=\"#Improved-imputation\" data-toc-modified-id=\"Improved-imputation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Improved imputation</a></span></li><li><span><a href=\"#Reprocessing-chords\" data-toc-modified-id=\"Reprocessing-chords-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Reprocessing chords</a></span></li></ul></li><li><span><a href=\"#New-baselines\" data-toc-modified-id=\"New-baselines-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>New baselines</a></span><ul class=\"toc-item\"><li><span><a href=\"#Logistic-Regression\" data-toc-modified-id=\"Logistic-Regression-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Logistic Regression</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Recalculating-features\" data-toc-modified-id=\"Recalculating-features-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recalculating features</a></span><ul class=\"toc-item\"><li><span><a href=\"#Reviewing-chord-parsing\" data-toc-modified-id=\"Reviewing-chord-parsing-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Reviewing chord parsing</a></span></li><li><span><a href=\"#Improved-imputation\" data-toc-modified-id=\"Improved-imputation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Improved imputation</a></span></li><li><span><a href=\"#Reprocessing-chords\" data-toc-modified-id=\"Reprocessing-chords-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Reprocessing chords</a></span></li></ul></li><li><span><a href=\"#Logistic-Regression-baseline\" data-toc-modified-id=\"Logistic-Regression-baseline-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Logistic Regression baseline</a></span></li><li><span><a href=\"#Training-root-model-only\" data-toc-modified-id=\"Training-root-model-only-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Training root model only</a></span></li><li><span><a href=\"#Balancing-predictions\" data-toc-modified-id=\"Balancing-predictions-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Balancing predictions</a></span></li></ul></div>"
    ]
   },
   {
@@ -466,9 +466,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## New baseline\n",
+    "## Logistic Regression baseline\n",
     "\n",
-    "### Logistic Regression\n",
     "Let's run a quick logistic regression model using the new data.  Previously, this achieved an accuracy of 7%, but it may be higher (because of improvements) or lower (because I didn't duplicate/transpose data).\n",
     "\n",
     "`python chord_train.py fullv2 lr_v2 lr --noT --params T 0.1`"
@@ -544,6 +543,58 @@
     "plt.ylabel('Truth')\n",
     "plt.rc('font', size=15)\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training root model only\n",
+    "For faster testing, let's add an option for chord_train to only train on the root.\n",
+    "\n",
+    "`python chord_train.py fullv2 lr_v2 lr --noT --root --params T 0.1`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will note for the record that this took 1/3 the amount of time (.4 min instead of 1.2 min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-10T22:13:46.399770Z",
+     "start_time": "2019-12-10T22:13:46.392871Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results\n",
+      "Root F1 score: 0.3717845308016485\n",
+      "Root accuracy: 0.38976689388201635\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = pickle.load(open(\"Models/lr_v2_metrics.pkl\", 'rb'))\n",
+    "print('Results')\n",
+    "print(f\"Root F1 score: {metrics['root_macro_valid']}\")\n",
+    "print(f\"Root accuracy: {metrics['root_acc_valid']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Balancing predictions\n",
+    "Currently, the model balances the imbalanced classes, by using the 'balanced' option in sklearn, which gives extra weight to uncommon classes.  This is satisfactory, but in thinking about binary classification problems, there's often an extra step, where we determine the best threshold for predicting class A vs class B.  Is there a way to determine best thresholds for a multi-classification problem?"
    ]
   },
   {
